# Airplane-War-SDL2-CPP-

./: CMakeLists.txt  SDLShooter  SDLShooter-Linux  resources.rc
src/: Game.cpp  Game.h  Object.h  Scene.h  SceneMain.cpp  SceneMain.h  main.cpp
